# konkondb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  concept.md  prd.md  pyproject.toml  tach.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.konkon/: config.toml  last_build  raw.json
docs/: implementation_guide.md
docs/adr/: 20260301-application-layer.md  20260301-doc-structure-foundation-command-spec.md  20260301-json-backend.md  20260302-migrate-command.md
docs/design/: 01_conceptual_architecture.md  02_interface_contracts.md  03_data_model.md  04_cli_conventions.md  04_cli_design.md  05_project_structure.md  06_build_context.md  DESIGN_GUIDELINES.md  README.md
docs/guide/: plugin-setup.md
docs/llm/: DESIGN_PROCESS.md  agent_execution_patterns.md
examples/json-export/: konkon.py
examples/konkondb/: README.md  context.json  konkon.py  llm.py  llm_cache.json  targets.py
experiments/ctx_retention/: README.md  article_base_session.md  report_claude.md  report_codex.md  report_gemini.md  setup.sh
scripts/: check-ingest.sh  ingest-staged.sh  ingest.sh  install-hooks.sh  pre-commit
src/konkon/: __init__.py  client.py  types.py
tests/: conftest.py  postgres_fakes.py  test_architecture.py  test_integration.py
tests/integration/: test_postgres_live.py
tests/test_application/: test_use_cases.py
tests/test_cli/: test_build.py  test_delete.py  test_describe.py  test_init.py  test_insert.py  test_main.py  test_migrate.py  test_raw.py  test_search.py  test_stateless.py  test_update.py
tests/test_core/: conftest.py  (+12 more)
(+51 files in other folders)
