[project]
name = "konkondb"
version = "0.1.0"
description = "AI-oriented context DB middleware — Pluggable engine between Raw Data and Context serving"
readme = "README.md"
authors = [
    { name = "mkXultra", email = "electrincgoat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
konkon = "konkon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/konkon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "tach>=0.33.4",
]
